<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <Button
        android:id="@+id/test1"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white_btn_color"
        android:text="@string/main_btn_text01"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/test2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white_btn_color"
        android:text="@string/main_btn_text02"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/test3"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white_btn_color"
        android:text="@string/main_btn_text03"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="281dp" />

    <Button
        android:id="@+id/test4"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white_btn_color"
        android:text="@string/main_btn_text04"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="281dp" />

    <Button
        android:id="@+id/text5"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white_btn_color"
        android:text="@string/main_btn_text05"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="404dp" />

    <Button
        android:id="@+id/text6"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white_btn_color"
        android:text="@string/main_btn_text06"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="404dp" />

    <Button
        android:id="@+id/test7"
        android:layout_width="238dp"
        android:layout_height="45dp"
        android:background="@color/green_btn_color"
        android:text="@string/complete_btn_text"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="452dp" />

    <Button
        android:id="@+id/test8"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@color/orange_btn_color"
        android:text="@string/modify_btn_text"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="506dp" />

    <Button
        android:id="@+id/test9"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@color/green_btn_color"
        android:text="@string/complete_btn_text"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="506dp" />

    <Button
        android:id="@+id/test10"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:background="@color/pear_btn_color"
        android:text="@string/pear_select_btn_text"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="565dp" />
    <Button
        android:id="@+id/test11"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:backgroundTint="@color/pear_btn_color"
        android:text="@string/pear_kind_01_text"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="55dp" />

    <Button
        android:id="@+id/test12"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:backgroundTint="@color/amount_btn_color"
        android:text="@string/pear_amount_01_text"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/test13"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/green_btn_color"
        android:text="@string/order_renewal_btn_text"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="565dp" />

    <Button
        android:id="@+id/test14"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:text="@string/modify_btn_text"
        android:textSize="13dp"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="86dp" />

    <Button
        android:id="@+id/test15"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:text="@string/delete_btn_text"
        android:textSize="13dp"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="121dp" />
    <!--+++++++++++++++++++++++++++++++++++++++++++++++ !-->

    <Button
        android:id="@+id/before"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="@color/white_btn_color"
        android:text="@string/before_btn_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/after"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="@color/white_btn_color"
        android:text="@string/after_btn_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>